// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders correctly 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders dark themed correctly 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders on a large breakpoint 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            BMI Group
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/products"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Products
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button Button--dark-background MuiButton-textPrimary Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Concrete Tiles
          </span>
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders on a small breakpoint 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            BMI Group
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/products"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Products
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button link Button--dark-background MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Button button Button--dark-background MuiButton-textPrimary Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="label"
          >
            Concrete Tiles
          </span>
        </span>
      </button>
    </li>
  </ol>
</nav>
`;
